# piphi_network_weatherxm

./: .env.example  .pdm-python  Dockerfile  README.md  manifest.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: contract.md  release.md
examples/: command.json  config.json  curl.sh  discovery-request.json  entity-response.json
scripts/: validate.py
src/: behaviors.json
src/piphi_network_weatherxm/: __init__.py  contract.py  schemas.py  settings.py  state.py  weatherxm.py
src/piphi_network_weatherxm/routes/: __init__.py  commands.py  config.py  discovery.py  entities.py  health.py  runtime.py  telemetry.py
tests/: test_conformance.py  test_contract.py  test_routes.py  test_weatherxm.py
tests/fixtures/: contract-conformance.json
