[project]
name = "piphi-network-weatherxm"
version = "0.1.0"
description = "PiPhi integration runtime for WeatherXM stations."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "uvicorn[standard]>=0.30.0",
  "piphi-runtime-kit-python>=0.3.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]


[project.scripts]
piphi_network_weatherxm = "piphi_network_weatherxm.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/piphi_network_weatherxm"]
